force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_HUBZone_SBC_Waive_Pref__c.field-meta.xml
<CustomField>
    <fullName>LOP_HUBZone_SBC_Waive_Pref__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HUBZone SBC waives price eval pref.</description>
    <label>HUBZone SBC Offeror</label>
    <type>Checkbox</type>
</CustomField>