force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_HVAC_HRS_MON_TO_FRI_END__c.field-meta.xml
<CustomField>
    <fullName>LOP_HVAC_HRS_MON_TO_FRI_END__c</fullName>
    <description>End :</description>
    <label>Monday - Friday Hours End</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1:00 AM</fullName>
            </value>
            <value>
                <fullName>2:00 AM</fullName>
            </value>
            <value>
                <fullName>3:00 AM</fullName>
            </value>
            <value>
                <fullName>4:00 AM</fullName>
            </value>
            <value>
                <fullName>5:00 AM</fullName>
            </value>
            <value>
                <fullName>6:00 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM</fullName>
            </value>
            <value>
                <fullName>7:00 PM</fullName>
            </value>
            <value>
                <fullName>8:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 PM</fullName>
            </value>
            <value>
                <fullName>10:00 PM</fullName>
            </value>
            <value>
                <fullName>11:00 PM</fullName>
            </value>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>