force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_HVAC_OT_Rate__c.field-meta.xml
<CustomField>
    <fullName>LOP_HVAC_OT_Rate__c</fullName>
    <description>HVAC OT Rate per Option selected</description>
    <inlineHelpText>HVAC OT Rate per Option selected</inlineHelpText>
    <label>HVAC OT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>