force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_HVAC_OT_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LOP_HVAC_OT_Rate_Type__c</fullName>
    <description>HVAC Overtime Rate Options</description>
    <inlineHelpText>HVAC Overtime Rate Options</inlineHelpText>
    <label>HVAC OT Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Zone</fullName>
            </value>
            <value>
                <fullName>Per Floor</fullName>
            </value>
            <value>
                <fullName>Per Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>