force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Initial_No_Of_Days_Terminate_Lease__c.field-meta.xml
<CustomField>
    <fullName>LOP_Initial_No_Of_Days_Terminate_Lease__c</fullName>
    <description>Number of Days Notice for Government to Terminate Lease</description>
    <label>Days Notice for Govt to Terminate Lease</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>