force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_INITIAL_NO_OF_YEARS__c.field-meta.xml
<CustomField>
    <fullName>LOP_INITIAL_NO_OF_YEARS__c</fullName>
    <description>Initial Lease Term Number of years</description>
    <label>Number of Years</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>