force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_INSURANCE__c.field-meta.xml
<CustomField>
    <fullName>LOP_INSURANCE__c</fullName>
    <label>Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>