force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_IS_HVAC_AVAIL_ON_SAT__c.field-meta.xml
<CustomField>
    <fullName>LOP_IS_HVAC_AVAIL_ON_SAT__c</fullName>
    <description>Is there a service on Saturday?</description>
    <label>Is there a service on Saturday?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>