force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Is_Shell_Rent_Stepped__c.field-meta.xml
<CustomField>
    <fullName>LOP_Is_Shell_Rent_Stepped__c</fullName>
    <description>Is Shell Rent Stepped</description>
    <inlineHelpText>Is Shell Rent Stepped</inlineHelpText>
    <label>Is Shell Rent Stepped</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>