force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_isHistoricProperty__c.field-meta.xml
<CustomField>
    <fullName>LOP_isHistoricProperty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Historic property / district: This flag will indicate if the Offeror answered “Yes” to any of the following questions on their offer: 
•	Is the property offered a historic property within a historic district?
•	Is the property offered a non-historic developed or undeveloped site within a historic district?
•	Is the property offered a historic property outside of a historic district?</description>
    <label>isHistoricProperty</label>
    <type>Checkbox</type>
</CustomField>