force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Lease_Annual_Rent_Per_RSF__c.field-meta.xml
<CustomField>
    <fullName>LOP_Lease_Annual_Rent_Per_RSF__c</fullName>
    <description>Lease Annual Rent Per RSF</description>
    <inlineHelpText>Lease Annual Rent Per RSF</inlineHelpText>
    <label>Lease Annual Rent Per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>