force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_LEASE_COMMISSION__c.field-meta.xml
<CustomField>
    <fullName>LOP_LEASE_COMMISSION__c</fullName>
    <label>Lease Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>