force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Lease_Has_Renewal_Options__c.field-meta.xml
<CustomField>
    <fullName>LOP_Lease_Has_Renewal_Options__c</fullName>
    <description>Renewal option provided</description>
    <label>Lease Has Renewal Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>