force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Lessor_Prj_Fees__c.field-meta.xml
<CustomField>
    <fullName>LOP_Lessor_Prj_Fees__c</fullName>
    <label>Management Fee as % of Total TI cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>