force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_LIVE_FLOOR_LOAD__c.field-meta.xml
<CustomField>
    <fullName>LOP_LIVE_FLOOR_LOAD__c</fullName>
    <description>What is the live floor load (lbs per sq ft.) for the building?</description>
    <label>Live Floor Load for Building</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>