force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_MANAGEMENT__c.field-meta.xml
<CustomField>
    <fullName>LOP_MANAGEMENT__c</fullName>
    <label>Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>