force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_NO_OF_MONTHS_FREE_FIRM_TERM__c.field-meta.xml
<CustomField>
    <fullName>LOP_NO_OF_MONTHS_FREE_FIRM_TERM__c</fullName>
    <description>The number of months of free rent without any payment
of base rent, operating expenses, or amortization of initial term Tenant Improvements plus
construction markups. -- FIRM TERM --</description>
    <label>Firm Term Free Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>