force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_NON_HIST_PROP_IN_HIST_DIST__c.field-meta.xml
<CustomField>
    <fullName>LOP_NON_HIST_PROP_IN_HIST_DIST__c</fullName>
    <description>Is the property offered a non-historic developed or undeveloped site within a historic district?</description>
    <label>Non Historic Property In Historic Dist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>