force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Num_Years_Annual_Rate_is_Effective__c.field-meta.xml
<CustomField>
    <fullName>LOP_Num_Years_Annual_Rate_is_Effective__c</fullName>
    <description>Number of Years Annual Rate is Effective</description>
    <label>Number of Years Annual Rate is Effective</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>