force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Number_of_floors__c.field-meta.xml
<CustomField>
    <fullName>LOP_Number_of_floors__c</fullName>
    <description>Number of floors in the building</description>
    <label>12. Number of floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>