force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offer_Additional_Remarks__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offer_Additional_Remarks__c</fullName>
    <description>Additional remarks for the offered building</description>
    <label>Additional Remarks</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>