force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offer_Basis_Of_Fees__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offer_Basis_Of_Fees__c</fullName>
    <label>Basis of Determining Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>