force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offer_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offer_Submission_Date__c</fullName>
    <label>Offer Submission Date</label>
    <type>DateTime</type>
</CustomField>