force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offer_Updated_since_last_import__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offer_Updated_since_last_import__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the offer submitted after due date change? If yes, that will also mean that Offer updated after the previous import</description>
    <inlineHelpText>Submitted Offer change flag</inlineHelpText>
    <label>Offer Updated since last import</label>
    <type>Checkbox</type>
</CustomField>