force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offered_Space_Part_of_Mult_Tax_Bills__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offered_Space_Part_of_Mult_Tax_Bills__c</fullName>
    <label>Offered Space Part of Multiple Tax Bills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>