force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Offeror</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LOP_Offerors</relationshipLabel>
    <relationshipName>LOP_Offerors</relationshipName>
    <type>Lookup</type>
</CustomField>