force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror_Address__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror_Address__c</fullName>
    <description>LOP Offeror Address</description>
    <formula>SUBSTITUTE(
  IF(ISBLANK($User.Street ),  NULL, $User.Street   + &apos;,&apos;) +
  IF(ISBLANK($User.City),    NULL, $User.City   + &apos;,&apos;) +
  IF(ISBLANK($User.State),   NULL, $User.State  + &apos;,&apos;) +
  IF(ISBLANK( $User.PostalCode ), NULL,  $User.PostalCode  + &apos;,&apos;) + &apos;.&apos;,
  &apos;,.&apos;,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LOP Offeror Address</inlineHelpText>
    <label>LOP Offeror Address</label>
    <type>Text</type>
</CustomField>