force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror_Company_Name__c</fullName>
    <description>LOP Offeror Company Name</description>
    <formula>$User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LOP Offeror Company Name</inlineHelpText>
    <label>LOP Offeror Company Name</label>
    <type>Text</type>
</CustomField>