force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror_First_Name__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror_First_Name__c</fullName>
    <description>LOP Offeror first name</description>
    <formula>$User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LOP Offeror first name</inlineHelpText>
    <label>LOP Offeror First Name</label>
    <type>Text</type>
</CustomField>