force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror_FLS_Declaration__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror_FLS_Declaration__c</fullName>
    <description>Per Section 2 of the RLP, Fire Protection and Life Safety, the property  meets OR does not meet the Lease fire/life safety standards. * attach appropriate documentation in the Attachments tab.</description>
    <label>Offeror FLS Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>the property meets the Lease fire/life safety standards.</fullName>
            </value>
            <value>
                <fullName>does not meet the Lease fire/life safety standards.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>