force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_OFFEROR_INTEREST__c.field-meta.xml
<CustomField>
    <fullName>LOP_OFFEROR_INTEREST__c</fullName>
    <description>What is your relationship as the offeror, to the property owner?</description>
    <label>Offeror Relationship to Property Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>