force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_OFFEROR_INTEREST_OTHER__c.field-meta.xml
<CustomField>
    <fullName>LOP_OFFEROR_INTEREST_OTHER__c</fullName>
    <description>What is your relationship as the offeror, to the property owner? Other???</description>
    <label>Offeror Relation to Property Owner Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>