force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror_Last_Name__c</fullName>
    <description>LOP Offeror Last Name</description>
    <formula>$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LOP Offeror Last Name</inlineHelpText>
    <label>LOP Offeror Last Name</label>
    <type>Text</type>
</CustomField>