force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror_Phone_Number__c</fullName>
    <description>LOP Offeror Phone Number</description>
    <formula>$User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LOP Offeror Phone Number</inlineHelpText>
    <label>LOP Offeror Phone Number</label>
    <type>Text</type>
</CustomField>